--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@ html, body {
 
 body {
   margin: 0;
-  overflow: hidden
-;}
+  overflow: hidden;
+  background: blue;
+}
 
 body * {
   box-sizing: border-box;
@@ -14,7 +15,7 @@ body * {
   -webkit-user-select: none;
 }
 
-[draggable] {
+[draggable] { /* TODO: add draggability */;
   cursor: move;
   position: fixed;
 }
@@ -24,7 +25,6 @@ body * {
   font-weight: bold;
   font-size: 17px;
 }
-
 
 .glow.activated {
   background-image: url('../assets/gradient.png');
@@ -43,35 +43,6 @@ body * {
  * - scroll
  */
 
-.key {
-  background: rgba(0, 0, 0, 0.2);
-  border: 2px solid rgba(255, 255, 255, 1);
-  border-radius: 10px;
-  
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-[data-section=alpha] .key,
-[data-section=function] .key {
-  flex: 8;
-
-  width: 6.3%;
-  height: 0;
-  margin: 2px 0.15%;
-}
-
-[data-section=alpha] .key {
-  padding-top: 2.9%;
-  padding-bottom: 2.9%;
-}
-
-[data-section=function] .key {
-  padding-top: 3%;
-  padding-bottom: 3%;
-}
-
 [data-section=function] {
   width: 960px;
   height: 65px;
@@ -80,13 +51,6 @@ body * {
 [data-section=alpha] {
   width: 960px;
   height: 319px;
-}
-
-[data-section=scroll],
-[data-section=navigation],
-[data-section=arrow] { 
-  display: flex;
-  flex-wrap: wrap;
 }
 
 [data-section=scroll] {
@@ -104,20 +68,33 @@ body * {
   height: 131px;
 }
 
-
-[data-section=scroll] .key,
-[data-section=navigation] .key,
-[data-section=arrow] .key {
-  height: 0;
-  padding-top: 12.5%;
-  padding-bottom: 12.5%;
-  margin: 2px 1%;
+[data-section=scroll],
+[data-section=navigation],
+[data-section=arrow] { 
+  display: flex;
+  flex-wrap: wrap;
 }
 
-[data-section=scroll] .key,
-[data-section=navigation] .key,
-[data-section=arrow] .key {
-  width: 27%;
+.key {
+  background: rgba(0, 0, 0, 0.2);
+  border: 2px solid rgba(255, 255, 255, 1);
+  border-radius: 10px;
+  
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.key {
+  height: 0;
+  width: 60px;
+  padding: 28px 0;
+  margin: 2px 1px;
+}
+
+[data-section=alpha] .key,
+[data-section=function] .key {
+  padding: 28px 0;
 }
 
 [data-section=arrow] [code=Up] {
