--- a/css/config.css
+++ b/css/config.css
@@ -1,14 +1,9 @@
 body {
   font-family: 'Roboto', sans-serif;
+  font-size: 10px;
 }
 
-h1 {
-  font-size: 12px;
-  color: #888;
-  font-weight: normal;
-}
-
-p {
+label {
   font-size: 12px;
   color: #CCC;
 }
