--- a/css/style.css
+++ b/css/style.css
@@ -64,14 +64,8 @@ body * {
   margin: 1px;
 }
 
-[data-section=scroll] .key,
-[data-section=navigation] .key,
-[data-section=arrow] .key {
-  margin: 1px 2px;
-}
-
 [data-section=arrow] [code=Up] {
-  margin: 1px calc(4em + 1px);
+  margin: 1px calc(4em - 2px);
 }
 
 [data-section=numpad] {
