--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ body * {
   display: none;
 }
 
+[data-section]:hover {
+  outline: 1px solid black;
+}
+
 .key {
   background: rgba(0, 0, 0, 0.2);
   border: 0.15em solid rgba(255, 255, 255, 1);
