--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 html, body {
   width: 100%;
   height: 100%;
+  background-color: #565656;
 }
 
 body {
   margin: 0;
   overflow: hidden;
   font-size: 7px;
-  background-color: #909090;
 }
 
 body * {
@@ -18,7 +18,6 @@ body * {
 
 [data-section] {
   position: fixed;
-  zoom: 1;
 }
 
 .glow {
@@ -53,7 +52,7 @@ body * {
 
 .key {
   background: rgba(0, 0, 0, 0.2);
-  border: 0.15em solid rgba(255, 255, 255, 1);
+  border: 0.18em solid rgba(255, 255, 255, 1);
   border-radius: 0.7em;
   
   display: inline-flex;
@@ -62,13 +61,34 @@ body * {
 }
 
 .key {
-  height: 3em;
+/*  height: 3em;
   width: 3em;
-  margin: 1px;
+*/  margin: 1%;
 }
 
 .key.hidden {
   visibility: hidden;
+}
+
+.flex_row {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.alpha_flex_row {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+  align-content: stretch;
+}
+
+.alpha_flex_row .key {
+  width: 6%;
+  margin: .3%;
 }
 
 /* Container (data-section) width fixes */
@@ -97,92 +117,106 @@ body * {
   flex: 3;
   display: flex;
   flex-wrap: wrap;
-  max-width: 10em;
-  max-height: 16em;
+  width: 75%;
+  height: 100%;
 }
 
 [data-section=numpad] .numpad-left [code=Num0] {
-  width: calc(6em + 2px);
+  width: 62%;
 }
 
 [data-section=numpad] .numpad-right {
-  max-width: 3.5em;
-  max-height: 17em;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  height: 100%;
 }
 
 [data-section=numpad] .numpad-right [code=Add],
 [data-section=numpad] .numpad-right [code=NumEnter] {
-  height: calc(6em + 2px);
+  width: 90%;
+  height: 39%;
+  margin-bottom: 5%;
 }
 
 /* Initial positions */
 [data-section=alpha] {
-  left: 0px;
-  top: 215.426px;
-  width: 373px;
-  height: 115px;
-  zoom: 3.07247;
+  left: 15px;
+  top: 271px;
+  width: 846.881px;
+  height: 261px;
+  font-size: 11.745px;
 }
 
 [data-section=function] {
-  left: 0px;
-  top: 187.621px;
-  width: 371px;
-  height: 23px;
-  zoom: 3.06469;
+  left: 16px;
+  top: 212px;
+  width: 842.817px;
+  height: 61px;
+  font-size: 15.25px;
+  display: flex;
+  flex-direction: row;
 }
 
 [data-section=scroll] {
-  left: 336px;
-  top: 161px;
-  width: 73px;
-  height: 23px;
-  zoom: 3.56817;
+  left: 863px;
+  top: 207px;
+  width: 177.333px;
+  height: 56px;
+  font-size: 10.64px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 [data-section=navigation] {
-  left: 325px;
-  top: 181px;
-  width: 74px;
-  height: 46px;
-  zoom: 3.67698;
+  left: 861px;
+  top: 271px;
+  width: 180.375px;
+  height: 117px;
+  font-size: 14.04px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 [data-section=arrow] {
-  left: 326px;
-  top: 230.561px;
-  width: 74px;
-  height: 47px;
-  zoom: 3.67127;
+  left: 866px;
+  top: 417px;
+  width: 178.675px;
+  height: 113px;
+  font-size: 13.56px;
 }
 
 [data-section=numpad] {
-  left: 394px;
-  top: 145px;
-  width: 95px;
-  height: 115px;
-  zoom: 3.89835;
+  left: 1055px;
+  top: 274px;
+  width: 212.304px;
+  height: 257px;
+  font-size: 11.565px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 /* Mouse visualizer */
 #mouse {
   position: relative;
   border: 0.25em solid white;
-  border-radius: 3em;
+  border-radius: 25%;
   white-space: nowrap;
 
-  width: 11em;
-  height: 15em;
-  left: 371px;
+  width: 179.787px;
+  height: 250px;
+  left: 1066px;
   top: 15px;
-  zoom: 4.23041;
+  font-size: 15px;
 }
 
 #mouse_left,
 #mouse_right {
-  width: 5.5em;
-  height: 9em;
-  border-bottom: 2px solid white;
+  height: 60%;
+  border-bottom: .25em solid white;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -190,23 +224,25 @@ body * {
 }
 
 #mouse_right {
-  border-bottom-right-radius: 9px;
-  left: -6px; /* borders of mouse + middle line */
+  width: 52%;
+  border-bottom-right-radius: 15%;
+  left: -2%; /* borders of mouse + middle line */
 }
 
 #mouse_left {
-  border-bottom-left-radius: 9px;
+  width: 50%;
+  border-bottom-left-radius: 15%;
 }
 
 #mouse_middle {
   position: absolute;
-  border: 2px solid white;
+  border: .25em solid white;
   width: 16%;
   height: 45%;
 
   left: 42%;
   top: 10%;
-  border-radius: 8px;
+  border-radius: 25px;
 }
 
 #mouse_scroll_up,
@@ -216,13 +252,31 @@ body * {
 }
 
 /* Keyboard function section sizes */
+.key[code='Esc'],
+.key[code='F1'],
+.key[code='F2'],
+.key[code='F3'],
+.key[code='F4'],
+.key[code='F5'],
+.key[code='F6'],
+.key[code='F7'],
+.key[code='F8'],
+.key[code='F9'],
+.key[code='F10'],
+.key[code='F11'],
+.key[code='F12'] {
+  margin: 2px;
+  width: 6%;
+  height: 79.4%;
+}
+
 .key[code='Esc'] {
-  margin-right: 3em;
+  margin-right: 6%;
 }
 
 .key[code='F4'],
 .key[code='F8'] {
-  margin-right: 2em;
+  margin-right: 5%;
 }
 
 
@@ -230,16 +284,16 @@ body * {
 .key[code='Backspace'],
 .key[code='Tab'],
 .key[code='Enter'] {
-  width: 6em;
+  width: 13%;
 }
 
 .key[code='CapsLock'] {
-  width: 6.5em;
+  width: 12.5%;
 }
 
 .key[code='LShift'],
 .key[code='RShift'] {
-  width: 8.05em;
+  width: 16%;
 }
 
 .key[code='LCtrl'],
@@ -249,9 +303,54 @@ body * {
 .key[code='LAlt'],
 .key[code='RAlt'],
 .key[code='Menu'] {
-  width: 3.75em;
+  width: 8%;
 }
 
 .key[code='Space'] {
-  width: 22em;
+  width: 38.5%;
+}
+
+.key[code='PrtScr'],
+.key[code='ScrollLock'],
+.key[code='Pause'] {
+  width: 30%;
+}
+
+.key[code='Insert'],
+.key[code='Home'],
+.key[code='PageUp'],
+.key[code='Delete'],
+.key[code='End'],
+.key[code='PageDown'] {
+  width: 30%;
+}
+
+.key[code='NumLock'],
+.key[code='Divide'],
+.key[code='Multiply'],
+.key[code='Num7'],
+.key[code='Num8'],
+.key[code='Num9'],
+.key[code='Num4'],
+.key[code='Num5'],
+.key[code='Num6'],
+.key[code='Num1'],
+.key[code='Num2'],
+.key[code='Num3'],
+.key[code='NumDecimal'] {
+  width: 30%;
+}
+
+.key[code='Subtract'] {
+  width: 90%;
+  height: 19%;
+  margin-bottom: 5%;
+}
+
+.hidden,
+.key[code='Up'],
+.key[code='Left'],
+.key[code='Down'],
+.key[code='Right'] {
+  width: 30%;
 }
