--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color: #565656;
+  background-color: #8D8D8D;
 }
 
 body {
@@ -61,9 +61,7 @@ body * {
 }
 
 .key {
-/*  height: 3em;
-  width: 3em;
-*/  margin: 1%;
+  margin: 1%;
 }
 
 .key.hidden {
@@ -153,7 +151,7 @@ body * {
   top: 212px;
   width: 842.817px;
   height: 61px;
-  font-size: 15.25px;
+  font-size: 14.25px;
   display: flex;
   flex-direction: row;
 }
@@ -163,7 +161,7 @@ body * {
   top: 207px;
   width: 177.333px;
   height: 56px;
-  font-size: 10.64px;
+  font-size: 11.64px;
   display: flex;
   flex-direction: row;
   justify-content: center;
