--- a/css/config.css
+++ b/css/config.css
@@ -1,7 +1,9 @@
 body {
-  margin-top: 20px;
+  margin: 17px 0 0 0;
   font-family: 'Roboto', sans-serif;
   font-size: 10px;
+  padding: 0;
+  width: 100%;
 }
 
 label {
@@ -17,23 +19,26 @@ label {
 
 .info, .generalInfo {
   background-color: #3d3d3d;
+  width: 15px;
+  height: 15px;
   font-size: 13px;
   font-weight: 900;
   color: #000;
   margin-left: 5px;
   padding: 0px 4.5px;
   border-radius: 2px;
+  display: inline-block;
 }
 
-span:hover {
+.info:hover, .generalInfo:hover {
   background-color: #0098d4;
 }
 
-span.info:hover ~ #keyInfo{
+.info:hover ~ #keyInfo{
   display: block;
 }
 
-span.generalInfo:hover ~ #generalInfo{
+.generalInfo:hover ~ #generalInfo{
   display: block;
 }
 
@@ -70,20 +75,46 @@ span.generalInfo:hover ~ #generalInfo{
 .checkelements {
   width: 100%;
   display: inline-flex;
-  padding: 5px 0 5px 0; 
+  padding: 5px 0 0 0;
 }
 
 .elementcontainer {
   width: 50%;
+  height: 165px;
   display: block;
+  position: relative;
 }
 
 #glowcolor {
   position: relative;
-  left: 10px;
+  left: 12px;
+  margin-right: 30px;
 }
 
 #bordercolor {
   position: relative;
   left: 2px;
+}
+
+#opacitySlider {
+  position: relative;
+  left: 28px;
+}
+
+.xuicontainer {
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+#innersection {
+  border: 1px solid #000;
+  padding: 5px;
+  background-color: #212121;
+}
+
+xui-section {
+  width: 97%;
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
