--- a/css/config.css
+++ b/css/config.css
@@ -1,3 +1,11 @@
+@font-face
+{
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   margin: 17px 0 0 0;
   font-family: 'Roboto', sans-serif;
