fix: minor bugs in positioning

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.ttf?45683775');
+  src: url('../fonts/fontello.ttf');
 }
 
 @font-face {
