--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,10 @@
 }
 
 html, body {
-  width: 100%;
-  height: 100%;
+/*  width: 100%;
+  height: 100%;*/
+  width: 1920px;
+  height: 1019px;
 }
 
 body {
