--- a/css/jquery-ui-custom.css
+++ b/css/jquery-ui-custom.css
@@ -31,7 +31,7 @@
   zoom: 1;
 }
 .ui-resizable-handle:hover {
-  border-color: wheat;
+  border-color: #03DCFF;
   border-style: solid;
 }
 
@@ -39,7 +39,7 @@
 .ui-resizable-s:hover,
 .ui-resizable-e:hover,
 .ui-resizable-w:hover {
-  background-color: wheat;
+  background-color: #03DCFF;
 }
 
 .ui-resizable-disabled .ui-resizable-handle,
@@ -48,67 +48,71 @@
 }
 .ui-resizable-n {
   cursor: n-resize;
-  height: 0.5em;
+  height: 4px;
   width: 100%;
-  top: -5px;
+  top: -2px;
   left: 0;
+  border-width: 4px;
 }
 .ui-resizable-s {
   cursor: s-resize;
-  height: 0.5em;
+  height: 4px;
   width: 100%;
-  bottom: -5px;
+  bottom: -2px;
   left: 0;
+  border-width: 4px;
 }
 .ui-resizable-e {
   cursor: e-resize;
-  width: 0.5em;
-  right: -5px;
+  width: 4px;
+  right: -2px;
   top: 0;
   height: 100%;
+  border-width: 4px;
 }
 .ui-resizable-w {
   cursor: w-resize;
-  width: 0.5em;
-  left: -5px;
+  width: 4px;
+  left: -2px;
   top: 0;
   height: 100%;
+  border-width: 4px;
 }
 .ui-resizable-se {
   cursor: se-resize;
-  width: 3em;
-  height: 3em;
-  right: -5px;
-  bottom: -5px;
+  width: 23px;
+  height: 23px;
+  right: -3px;
+  bottom: -3px;
 
-  border-width: 0 1em 1em 0;
+  border-width: 0 5px 5px 0;
 }
 .ui-resizable-sw {
   cursor: sw-resize;
-  width: 3em;
-  height: 3em;
-  left: -5px;
-  bottom: -5px;
+  width: 23px;
+  height: 23px;
+  left: -3px;
+  bottom: -3px;
 
-  border-width: 0 0 1em 1em;
+  border-width: 0 0 5px 5px;
 }
 .ui-resizable-nw {
   cursor: nw-resize;
-  width: 3em;
-  height: 3em;
-  left: -5px;
-  top: -5px;
+  width: 23px;
+  height: 23px;
+  left: -3px;
+  top: -3px;
 
-  border-width: 1em 0 0 1em;
+  border-width: 5px 0 0 5px;
 }
 .ui-resizable-ne {
   cursor: ne-resize;
-  width: 3em;
-  height: 3em;
-  right: -5px;
-  top: -5px;
+  width: 23px;
+  height: 23px;
+  right: -3px;
+  top: -3px;
 
-  border-width: 1em 1em 0 0;
+  border-width: 5px 5px 0 0;
 }
 
 /* Overlays */
